# macroquad-smooth2d-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  check.sh  llms.txt  run.sh
.github/ISSUE_TEMPLATE/: diagnostic_report.md
.github/workflows/: check.yml
articles/: macroquad-frame-pacing-jitter.md
docs/: frame_pacing_asset.md  present_sleep_pacer.md
examples/: basic_pacing.rs
src/: app_options.rs  config.rs  cpu_stats.rs  diagnostics.rs  frame_log.rs  frame_pacer.rs  frame_stats.rs  game.rs  lib.rs  main.rs  platform_tuning.rs
